@@ -4,6 +4,9 @@
 
 	* fusermount: fix uid checking bug.  Patch by Adam Connell
 
+	* KERNEL: fix compile on various RedHad patched 2.4 kernels.
+	Patch by Keshava Gowda
+
 2005-01-20  Miklos Szeredi <miklos@szeredi.hu>
 
 	* KERNEL: provide correct llseek semantics for fuse device (fixes
